tests/programs/invalid/omitted_local_initializer.java
public class omitted_local_initializer {
  public A() {}
  public void m() {
    int x /* = 0 */;
  }
}